--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-annotation/manzai/data/*.tsv
+### 追記
+annotation/manzai/data/*
 venv
-
+documents/*
 
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
